fix grammer problem in text and align the text to the left

--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ button:hover {
   font-size: 85px;
   text-shadow: 2px 2px 2px black;
   color: var(--primary-color);
-  text-align: center;
+  text-align: left;
 }
 
 .btn {
